# hydrogen-salt-storage

./: .coverage  .editorconfig  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CITATION.cff  README.md  convert-notebooks.sh  matplotlibrc  pyfluids.ini  pyproject.toml  requirements.txt
.github/workflows/: sphinx.yml
data/: README.md
data/bathymetry/: D4_2022.nc.zip.txt  D4_2022.tif.zip.txt
data/boundaries/: osi-provinces-ungeneralised-2019.zip.txt
data/exploration-wells/: Exploration_Wells_Irish_Offshore.shapezip.zip.txt
data/kish-basin/: Kish-Basin-dat-files.zip.txt
data/pipelines/: pipelines.zip.txt
data/shipping/: shipping_frequently_used_routes.zip.txt
data/shipwrecks/: IE_GSI_MI_Shipwrecks_IE_Waters_WGS84_LAT.zip.txt
data/subsea-cables/: Olex_KIS-ORCA-v2023.zip.txt
data/weibull-parameters-wind-speeds/: Weibull_150m_params_ITM.zip.txt
data/wind-farms/: marine-area-consent-wind.zip.txt  wind-farms-foreshore-process.zip.txt
docs/: conf.py  datasets.rst  functions.rst  index.rst  map.ipynb  methods.rst  notebooks.rst  optimisation.rst  requirements.txt  tests.rst
docs/methods/: capacity.rst  compare.rst  data.rst  functions.rst  optimisation.rst  plotting.rst  read_data.rst  tests.rst
docs/notebooks/: bathymetry.ipynb  caverns.rst  exclusions.rst  frequent_shipping_routes.ipynb  geology.rst  ireland_boundary.ipynb  ireland_boundary_basemaps.ipynb  kish_basin_caverns.ipynb  kish_basin_caverns_capacity.ipynb  kish_basin_caverns_capacity_feasible.ipynb  kish_basin_caverns_capacity_ntg.ipynb  kish_basin_caverns_constrained.ipynb  kish_basin_caverns_height.ipynb  kish_basin_constraints.ipynb  kish_basin_dat_files.ipynb  kish_basin_exclusions.ipynb  kish_basin_interactive_map.ipynb  kish_basin_stats.ipynb  net_to_gross.ipynb  offshore_exploration_wells.ipynb  offshore_wind_farms.ipynb  optimisation.rst  oredp_areas.ipynb  sensitivity.ipynb  shipwrecks.ipynb  subsea_cables.ipynb  weibull_parameters_wind_speeds.ipynb  wind_farm_optimisation.ipynb  wind_farm_optimisation_2gw.ipynb  wind_farm_optimisation_ntg.ipynb
docs/tests/: test_capacity.rst  test_optimisation.rst  tests.rst
h2ss/: __init__.py  capacity.py  compare.py  data.py  functions.py  optimisation.py  plotting.py
hydrogen_salt_storage/: __init__.py  functions.py  optimisation.py
notebooks/: bathymetry.ipynb  frequent_shipping_routes.ipynb  heritage_sites.ipynb  heritage_sites_unesco.ipynb  ireland_boundary_basemaps.ipynb  ireland_boundary_nuts.ipynb  kish_basin_caverns.ipynb  kish_basin_caverns_capacity.ipynb  kish_basin_caverns_constrained.ipynb  kish_basin_dat_files.ipynb  kish_basin_sensitivity.ipynb  kish_basin_stats.ipynb  marine_protected_areas.ipynb  offshore_exploration_wells.ipynb  offshore_wind_farms.ipynb  oredp_areas.ipynb  shipwrecks.ipynb  subsea_cables.ipynb  unesco_heritage_sites.ipynb  weibull_parameters_wind_speeds.ipynb  wind_farm_optimisation.ipynb  wind_farms_foreshore_process.ipynb
scripts/: bathymetry.py  frequent_shipping_routes.py  heritage_sites.py  heritage_sites_unesco.py  ireland_boundary.py  ireland_boundary_basemaps.py  ireland_boundary_nuts.py  kish_basin_caverns.py  kish_basin_caverns_capacity.py  kish_basin_caverns_constrained.py  kish_basin_caverns_height.py  kish_basin_dat_files.py  kish_basin_exclusions.py  kish_basin_sensitivity.py  kish_basin_stats.py  marine_protected_areas.py  net_to_gross.py  offshore_exploration_wells.py  offshore_wind_farms.py  oredp_areas.py  sensitivity.py  shipwrecks.py  subsea_cables.py  unesco_heritage_sites.py  weibull_parameters_wind_speeds.py  wind_farm_optimisation.py  wind_farm_optimisation_2gw.py  wind_farms_foreshore_process.py
src/: __init__.py  capacity.py  data.py  functions.py  optimisation.py  read_data.py
tests/: test_capacity.py  test_functions.py  test_optimisation.py
