[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrogen-salt-storage"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
  "cartopy",
  "contextily",
  "dask",
  "geocube",
  "matplotlib-scalebar",
  "mapclassify",
  "pooch",
  "pyfluids",
  "seaborn",
]
authors = [
  {name = "Nithiya Streethran", email = "nmstreethran@gmail.com"},
]
readme = "README.md"
description = "Optimising production and long-term bulk storage of hydrogen from offshore wind in salt caverns in the Irish Sea"
keywords = ["green hydrogen", "renewable energy", "ireland", "offshore wind", "energy storage", "geological storage", "salt caverns"]
classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
docs = [
  "myst-nb",
  "pydata-sphinx-theme",
]
test = [
  "black[jupyter]",
  "coverage",
  "flake8",
  "jupyterlab",
  "nbconvert",
  "pylint",
  "pytest",
]

[project.urls]
Documentation = "https://hydrogen-salt-storage.readthedocs.io/"
Repository = "https://github.com/nmstreethran/hydrogen-salt-storage.git"
Issues = "https://github.com/nmstreethran/hydrogen-salt-storage/issues"

[tool.black]
line-length = 79

[tool.pyfluids]
units_system = "SI"
